# pi-project

./: .gitignore  CMakeLists.txt  Doxyfile  column  readme.md  start.sh
docs/html/: _i2_c_device_8cpp.html  _i2_c_device_8hpp.html  _i2_c_device_8hpp_source.html  annotated.html  annotated_dup.js  class_i2_c_device-members.html  class_i2_c_device.html  class_i2_c_device.js  classclient-members.html  classclient.html  classclient.js  classconnection-members.html  classconnection.html  classconnection.js  classes.html  classgroup-members.html  classgroup.html  classgroup.js  classnode-members.html  classnode.html  classnode.js  classobject_handler-members.html  classobject_handler.html  classobject_handler.js  classserver-members.html  classserver.html  classserver.js  classsettings-members.html  classsettings.html  classsettings.js  classtrigger-members.html  classtrigger.html  classtrigger.js  client_8cpp.html  client_8hpp.html  client_8hpp_source.html  connection_8cpp.html  connection_8hpp.html  connection_8hpp_source.html  definitions_8hpp.html  (+59 more)
docs/html/search/: all_0.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+43 more)
obsolete/: client.cpp  client.hpp  mysql.cpp  mysql.hpp  server.cpp  server.hpp
obsolete/networking/: connection.cpp  connection.hpp  protoDescriptor.cpp  server.hpp
src/: I2CDevice.cpp  I2CDevice.hpp  client.cpp  client.hpp  connection.cpp  connection.hpp  definitions.hpp  globalObjects.hpp  globals.hpp  group.cpp  group.hpp  main.cpp  node.cpp  node.hpp  objectHandler.cpp  objectHandler.hpp  pin.cpp  pin.hpp  server.cpp  server.hpp  settings.cpp  settings.hpp  strings.hpp  trigger.cpp  trigger.hpp
